--- a/example/package.json
+++ b/example/package.json
@@ -15,8 +15,7 @@
     "react-krpano-hooks": "^1.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-transition-group": "^4.4.1",
-    "react-use": "^15.3.4"
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "cross-env PUBLIC_URL=/ react-scripts start",
